chore: Update vercel.json to include static file build and route configuration

--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,15 @@
     {
       "src": "app.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "client/dist/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
+    { "src": "/api/images/day1", "dest": "/app.js" },
+    { "src": "/api/images/day2", "dest": "/app.js" },
+    { "src": "/api/images/carousel", "dest": "/app.js" },
     {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "/client/dist/index.html"
     }
   ]
 }
