--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,31 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "public/assets/videos/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "api/**/*.js",
       "use": "@vercel/node"
     },
     {
-      "src": "client/dist/**",
-      "use": "@vercel/static"
+      "src": "src/index.js",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
     {
+      "src": "/assets/videos/(.*)",
+      "dest": "/public/assets/videos/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "/index.html"
     }
   ]
 }
