--- a/vercel.json
+++ b/vercel.json
@@ -2,31 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "public/assets/videos/*",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "api/**/*.js",
+      "src": "app.js",
       "use": "@vercel/node"
     },
     {
-      "src": "src/index.js",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "src": "client/dist/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/assets/videos/(.*)",
-      "dest": "/public/assets/videos/$1"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "app.js"
     }
   ]
 }
